--- a/SITE-FINAL/index.html
+++ b/SITE-FINAL/index.html
@@ -40,10 +40,10 @@
           <li class="nav-item">
             <a class="nav-link active " aria-current="page" href="#">Produtos</a>
           </li>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Polimento Técnico</a></li>
-            <li><a class="dropdown-item" href="#">Limpeza Interna</a></li>
-            <li><a class="dropdown-item" href="#">Revitaliazação de Pintura</a></li>
+          <ul class="dropdown-menu" id="servicos">
+            <li><a class="dropdown-item" href="#servicos">Polimento Técnico</a></li>
+            <li><a class="dropdown-item" href="#servicos">Limpeza Interna</a></li>
+            <li><a class="dropdown-item" href="#servicos">Revitalização de Pintura</a></li>
           </ul>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -127,21 +127,34 @@
 
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">
+              <a class="nav-link active" aria-current="page" href="#servicos" >
                 <h1 class="titulo">Serviços</h1>
               </a>
             </li>
-            <div class="container text-center">
-              <div class="row">
-                <div class="col">
-                  <img src="img/servico.png" alt="">
-                </div>
-                <div class="col">
-                  <img src="img/servico.png" alt="">
-                </div>
-                <div class="col">
-                  <img src="img/servico.png" alt="">
-                </div>
+            <div class="card border-danger mb-3" style="max-width: 18rem;">
+              <div class="card-header">Polimento Técnico</div>
+              <div class="card-body">
+                <img src="img/servico.png" alt="">
+                <h5 class="card-title">Danger card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <button type="button" class="btn btn-danger">Danger</button>
+              </div>
+            </div>
+            <div class="card border-danger mb-3" style="max-width: 18rem;">
+              <div class="card-header">Limpeza Interna</div>
+              <div class="card-body">
+                <img src="img/servico.png" alt="">
+                <h5 class="card-title">Danger card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+            <div class="card border-danger mb-3" style="max-width: 18rem;">
+              <div class="card-header">Revitalização de Pintura</div>
+              <div class="card-body">
+                <img src="img/servico.png" alt="">
+                <h5 class="card-title">Danger card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
               </div>
             </div>
             <div class="container text-center">
