--- a/SITE-FINAL/index.html
+++ b/SITE-FINAL/index.html
@@ -49,17 +49,17 @@
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Contatos
             </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">(11) 91726-1726</a></li>
-              <li><a class="dropdown-item" href="#">@EsteticaAutomotiva</a></li>
-            </ul>
+              <ul class="dropdown-menu" id="contato">
+                <li><a class="dropdown-item" href="#"> <img src="img/whatsapp.png" alt=""> (11) 91726-1726</a></li>
+                <li><a class="dropdown-item" href="#"> <img src="img/insta.png" alt=""> @EsteticaAutomotiva</a></li>
+              </ul>
           <li class="nav-item">
-            <a class="nav-link active " aria-current="page" href="#">Sobre</a>
+            <a class="nav-link active " aria-current="page" href="#" style="padding-right: 25px;">Sobre</a>
           </li>
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> <!-- FIM DO NAVBAR -->
 
   <div class="container-fluid"> <!-- Inicio do container principal -->
     <div class="container-fluid text-center">
@@ -248,47 +248,6 @@
           hic ratione omnis provident?</p>
 
 
-        <div class="container text-start">
-          <div class="row">
-            <div class="col">
-              <div class="card mb-3 nasiol" style="max-width: 540px;">
-                <div class="row g-0">
-                  <div class="col-md-4">
-                    <img src="img/nasiol.png" class="img-fluid rounded-start nasiol" alt="...">
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <h5 class="card-title text-center">Nasiol</h5>
-                      <p class="card-text">A tecnologia exclusiva dos produtos Nasiol mantém a superfície retilínea e
-                        com um toque extremamente liso, mesmo sendo extremamente duro, fazendo com que seu ângulo de
-                        repelência seja de 105º, mantendo seu carro limpo por muito mais tempo e o único livre de
-                        manutenção.</p>
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card mb-3 nasiol" style="max-width: 540px;">
-                <div class="row g-0">
-                  <div class="col-md-4">
-                    <img src="img/microfibra.png" class="img-fluid rounded-start nasiol" alt="...">
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <h5 class="card-title text-center">Panos de Microfibra</h5>
-                      <p class="card-text">Os panos de microfibra são verdadeiros aliados na busca por uma limpeza
-                        eficiente e delicada. Compostos por fibras sintéticas extremamente finas e densas, esses panos
-                        apresentam uma capacidade excepcional de absorção e retenção de sujeira, poeira e umidade.</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <br> <br>
 
           <div class="container text-start">
             <div class="row">
@@ -296,13 +255,15 @@
                 <div class="card mb-3 nasiol" style="max-width: 540px;">
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="img/encerar.png" class="img-fluid rounded-start nasiol" alt="...">
+                      <img src="img/nasiol.png" class="img-fluid rounded-start nasiol" alt="...">
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title text-center">Tecnologia de ponta</h5>
-                        <p class="card-text">As melhores máquinas de encerar carros são verdadeiras aliadas para quem busca o máximo brilho e proteção para a pintura de seus veículos. Equipadas com tecnologia de ponta e materiais de alta qualidade, essas máquinas garantem uma aplicação de cera eficiente e uniforme, elevando a estética e a durabilidade do acabamento.</p>
-  
+                        <h5 class="card-title text-center">Nasiol</h5>
+                        <p class="card-text">A tecnologia exclusiva dos produtos Nasiol mantém a superfície retilínea e
+                          com um toque extremamente liso, mesmo sendo extremamente duro, fazendo com que seu ângulo de
+                          repelência seja de 105º, mantendo seu carro limpo por muito mais tempo e o único livre de
+                          manutenção.</p>
                       </div>
                     </div>
                   </div>
@@ -312,24 +273,80 @@
                 <div class="card mb-3 nasiol" style="max-width: 540px;">
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="img/vidro.png" class="img-fluid rounded-start nasiol" alt="...">
+                      <img src="img/microfibra.png" class="img-fluid rounded-start nasiol" alt="...">
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title text-center">Aplicação de Películas para Vidros</h5>
-                        <p class="card-text">Trabalhamos somente com películas de alto nível de qualidade, garantindo melhores resultados na aplicação, melhor visibilidade e garantia completa contra manchas e desbotamentos.
-
-                          Nosso serviço de aplicação inclui a lavagem do veículo para controle de partículas de sujeira e resultados de alto padrão</p>
+                        <h5 class="card-title text-center">Panos de Microfibra</h5>
+                        <p class="card-text">Os panos de microfibra são verdadeiros aliados na busca por uma limpeza
+                          eficiente e delicada. Compostos por fibras sintéticas extremamente finas e densas, esses panos
+                          apresentam uma capacidade excepcional de absorção e retenção de sujeira, poeira e umidade.</p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+            <br> <br>
+            <div class="container text-start">
+              <div class="row">
+                <div class="col">
+                  <div class="card mb-3 nasiol" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img src="img/encerar.png" class="img-fluid rounded-start nasiol" alt="...">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title text-center">Tecnologia de ponta</h5>
+                          <p class="card-text">As melhores máquinas de encerar carros são verdadeiras aliadas para quem busca o máximo brilho e proteção para a pintura de seus veículos. Equipadas com tecnologia de ponta e materiais de alta qualidade, essas máquinas garantem uma aplicação de cera eficiente e uniforme, elevando a estética e a durabilidade do acabamento.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card mb-3 nasiol" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img src="img/vidro.png" class="img-fluid rounded-start nasiol" alt="...">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title text-center">Aplicação de Películas para Vidros</h5>
+                          <p class="card-text">Trabalhamos somente com películas de alto nível de qualidade, garantindo melhores resultados na aplicação, melhor visibilidade e garantia completa contra manchas e desbotamentos.
+                            Nosso serviço de aplicação inclui a lavagem do veículo para controle de partículas de sujeira e resultados de alto padrão</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+<br>
 
+        <br> <br>
+            <h1 class="titulo">Onde nos encontrar</h1>
+            <p class="subtexto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nulla? Doloremque, alias. Odit error autem, tempore deserunt, maiores nulla dolorum iusto praesentium alias beatae minima totam blanditiis doloremque ad suscipit! </p> 
+          </a>
+        </li> <br>
 
+        <div class="container text-center">
+          <div class="row">
+            <div class="col">
+              <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.7658347885413!2d-46.57973140321043!3d-23.540923200000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5ec26cfdcfed%3A0x49e7eb66fd4f1f2!2sSenac%20Tatuap%C3%A9%20-%20Cel.%20Lu%C3%ADs%20Americano!5e0!3m2!1spt-BR!2sbr!4v1697736802059!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="col">
+              <a href="asadsda" class="rodape"><img src="img/whatsappG.png" alt=""> (11) 1234-1234</a> <br> <br>
+              <a href="asadsda" class="rodape2"><img src="img/instaG.png" alt="">@EsteticaAutomotiva</a>
+            </div>
+          </div>
 
+          <br>
 
+          <footer class="footer">
+            <p>Curso Técnico de Informática - 02-22 | 2023</p>
+            <p>Somente fins educativos.</p>
+        </footer>
 
 
 
