Sobre e pequenas modificações

--- a/SITE-FINAL/index.html
+++ b/SITE-FINAL/index.html
@@ -17,7 +17,7 @@
   <!-- BARRA DE NAVEGAÇÃO -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #ffffff; padding-left: 20px;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"> <img src="img/kumara.png" alt=""> </a>
+      <a class="navbar-brand" href="#"> <img src="img/KURUMA.png" alt=""> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
                 <li><a class="dropdown-item" href="#"> <img src="img/insta.png" alt=""> @EsteticaAutomotiva</a></li>
               </ul>
           <li class="nav-item">
-            <a class="nav-link active " aria-current="page" href="#" style="padding-right: 25px;">Sobre</a>
+            <a class="nav-link active " aria-current="page" href="sobre.html" style="padding-right: 25px;">Sobre</a>
           </li>
         </ul>
       </div>
@@ -65,7 +65,7 @@
     <div class="container-fluid text-center">
       <div class="row">
         <div class="col">
-          <h1 class="titulo">Estética Automotiva</h1> <br>
+          <h1 class="titulo">KURUMA SHINE</h1> <br>
           <p class="subtexto">Você ama o seu carro, e nós também! Na nossa estética automotiva, não apenas cuidamos da
             parte externa do seu veículo, mas revelamos a sua verdadeira beleza interior. Imagine o seu carro brilhando,
             impecável e pronto para impressionar por onde passar. <br> <br> Seja uma limpeza profunda, polimento
@@ -338,14 +338,14 @@
             <div class="col">
               <a href="asadsda" class="rodape"><img src="img/whatsappG.png" alt=""> (11) 1234-1234</a> <br> <br>
               <a href="asadsda" class="rodape2"><img src="img/instaG.png" alt="">@EsteticaAutomotiva</a>
+              <a href="https://www.sp.senac.br/" target="_blank"><img src="img/senac.png" alt=""></a>
             </div>
           </div>
 
           <br>
 
           <footer class="footer">
-            <p>Curso Técnico de Informática - 02-22 | 2023</p>
-            <p>Somente fins educativos.</p>
+            <p>Curso Técnico de Informática - 02-22 | 2023 | Somente fins educativos.</p>
         </footer>
 
 
