Alterações style.css

--- a/SITE-FINAL/index.html
+++ b/SITE-FINAL/index.html
@@ -38,20 +38,15 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active " aria-current="page" href="#">Produtos</a>
+            <a class="nav-link active " aria-current="page" href="#produtos">Produtos</a>
           </li>
-          <ul class="dropdown-menu" id="servicos">
-            <li><a class="dropdown-item" href="#servicos">Polimento Técnico</a></li>
-            <li><a class="dropdown-item" href="#servicos">Limpeza Interna</a></li>
-            <li><a class="dropdown-item" href="#servicos">Revitalização de Pintura</a></li>
-          </ul>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Contatos
             </a>
               <ul class="dropdown-menu" id="contato">
-                <li><a class="dropdown-item" href="#"> <img src="img/whatsapp.png" alt=""> (11) 91726-1726</a></li>
-                <li><a class="dropdown-item" href="#"> <img src="img/insta.png" alt=""> @EsteticaAutomotiva</a></li>
+                <li><a class="dropdown-item" href="https://web.whatsapp.com" target="_blank"> <img src="img/whatsapp.png" alt=""> (11) 91234-1234</a></li>
+                <li><a class="dropdown-item" href="https://www.instagram.com" target="_blank"> <img src="img/insta.png" alt=""> @EsteticaAutomotiva</a></li>
               </ul>
           <li class="nav-item">
             <a class="nav-link active " aria-current="page" href="sobre.html" style="padding-right: 25px;">Sobre</a>
@@ -137,13 +132,13 @@
             <div id="carouselExample1" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/carrossel1.jpg" class="d-block w-100" alt="...">
+                  <img src="img/polimento1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/carrossel2.jpg" class="d-block w-100" alt="...">
+                  <img src="img/polimento2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/carrossel3.jpg" class="d-block w-100" alt="...">
+                  <img src="img/polimento3.png" class="d-block w-100" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample1"
@@ -168,13 +163,13 @@
             <div id="carouselExample2" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/carrossel1.jpg" class="d-block w-100" alt="...">
+                  <img src="img/limpezainterna1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/carrossel2.jpg" class="d-block w-100" alt="...">
+                  <img src="img/limpezainterna2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/carrossel3.jpg" class="d-block w-100" alt="...">
+                  <img src="img/limpezainterna3.png" class="d-block w-100" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2"
@@ -194,18 +189,18 @@
           </div>
         </div>
         <div class="card border-danger mb-3" style="max-width: 18rem;">
-          <div class="card-header">Revitalização de Pintura</div>
+          <div class="card-header">Películas Solares</div>
           <div class="card-body">
             <div id="carouselExample3" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/carrossel1.jpg" class="d-block w-100" alt="...">
+                  <img src="img/pelicula1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/carrossel2.jpg" class="d-block w-100" alt="...">
+                  <img src="img/pelicula2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/carrossel3.jpg" class="d-block w-100" alt="...">
+                  <img src="img/pelicula3.png" class="d-block w-100" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample3"
@@ -220,7 +215,7 @@
               </button>
             </div>
             <h5 class="card-title"></h5>
-            <p class="card-text">Revitalização da pintura para reparos de danos graves e superficiais da tinta.</p>
+            <p class="card-text">Aplicação de películas solares de todas as porcentagens permitidas por lei.</p>
             <button type="button" class="btn btn-danger">Agendar</button>
           </div>
         </div>
@@ -237,7 +232,7 @@
         </div>
 
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#servicos"> <br> <br> <br> <br> <br>
+          <a class="nav-link active" aria-current="page" href="#produtos"> <br> <br> <br> <br> <br>
             <h1 class="titulo">Produtos e Marcas</h1>
           </a>
         </li>
@@ -338,7 +333,7 @@
             <div class="col">
               <a href="asadsda" class="rodape"><img src="img/whatsappG.png" alt=""> (11) 1234-1234</a> <br> <br>
               <a href="asadsda" class="rodape2"><img src="img/instaG.png" alt="">@EsteticaAutomotiva</a>
-              <a href="https://www.sp.senac.br/" target="_blank"><img src="img/senac.png" alt=""></a>
+              <a href="https://www.sp.senac.br/" target="_blank"><img class="rodape3" src="img/senac.png" alt=""></a>
             </div>
           </div>
 
