Correção de erros na visibilidade responsiva

--- a/SITE-FINAL/index.html
+++ b/SITE-FINAL/index.html
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary"
     style="background-color: #ffffff; padding-left: 20px; font-weight: 500;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"> <img src="img/KURUMA.png" alt=""> </a>
+      <a class="navbar-brand" href="index.html"> <img src="img/KURUMA.png" alt=""> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,14 +27,14 @@
       <div class="collapse navbar-collapse me-auto" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active " aria-current="page" href="#">Inicio</a>
+            <a class="nav-link active " aria-current="page" href="index.html">Inicio</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" style="color: black;" href="#" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
               Serviços
             </a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu" id="servicos">
               <li><a class="dropdown-item" href="#polimento">Polimento Técnico</a></li>
               <li><a class="dropdown-item" href="#limpeza">Limpeza Interna</a></li>
               <li><a class="dropdown-item" href="#pelicula">Aplicação de Película</a></li>
@@ -43,17 +43,21 @@
           <li class="nav-item">
             <a class="nav-link active " aria-current="page" href="#produtos">Produtos</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" style="color: black;" href="#" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Contatos
-            </a>
-            <ul class="dropdown-menu" id="contato">
-              <li><a class="dropdown-item" href="https://web.whatsapp.com" target="_blank"> <img src="img/whatsapp.png"
-                    alt=""> (11) 91234-1234</a></li>
-              <li><a class="dropdown-item" href="https://www.instagram.com" target="_blank"> <img src="img/insta.png"
-                    alt=""> @EsteticaAutomotiva</a></li>
-            </ul>
+          
+            <li class="nav-item">
+              <a class="nav-link active " aria-current="page" href="#localizacao">Localização</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" style="color: black;" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Contatos
+              </a>
+              <ul class="dropdown-menu" id="contato">
+                <li><a class="dropdown-item" href="https://web.whatsapp.com" target="_blank"> <img src="img/whatsapp.png"
+                      alt=""> (11) 91234-1234</a></li>
+                <li><a class="dropdown-item" href="https://www.instagram.com" target="_blank"> <img src="img/insta.png"
+                      alt=""> @KurumaShine</a></li>
+              </ul>
           <li class="nav-item">
             <a class="nav-link active " aria-current="page" href="sobre.html" style="padding-right: 25px;">Sobre</a>
           </li>
@@ -341,7 +345,7 @@
             <br> <br>
             <div class="parte4">
               <br>
-              <h1 class="titulo">Onde nos encontrar</h1>
+              <h1 class="titulo" id="localizacao">Onde nos encontrar</h1>
               <p class="subtexto text-center">Venha nos fazer uma visita! Aqui teremos o melhor cuidado com o seu
                 veículo e o melhor
                 atendimento possível para você!</p>
@@ -360,8 +364,8 @@
                         alt="">
                       (11) 1234-1234</a> <br> <br>
                     <a href="https://www.instagram.com" target="_blank" class="rodape2"><img src="img/instaG.png"
-                        alt="">@EsteticaAutomotiva</a> <br>
-                    <a href="https://www.sp.senac.br/" target="_blank"><img class="rodape3" src="img/senac.png"
+                        alt="">@KurumaShine</a> <br>
+                    <a href="https://www.sp.senac.br/" target="_blank"><img class="rodape3" src="img/logo-senac.png"
                         alt=""></a>
                   </div>
                 </div>
