--- a/SITE-FINAL/sobre.html
+++ b/SITE-FINAL/sobre.html
@@ -66,7 +66,7 @@
       <img class="senac" src="img/logo-senac.png" alt="">
     </div>
   </div>
-  <footer class="footer text-center" id="ftsobre">
+  <footer class="footer text-center footer2" id="ftsobre">
     <p>Curso Técnico de Informática - 02-22 | 2023 | Somente fins educativos.</p>
   </footer>
 
