--- a/SITE-FINAL/index.html
+++ b/SITE-FINAL/index.html
@@ -165,8 +165,8 @@
                     </button>
                   </div>
                   <h5 class="card-title"></h5>
-                  <p class="card-text">Polimento técnico usando produtos da MARCA TAL* da melhor qualidade para o melhor
-                    brilho do seu veículo.</p> <button type="button" class="btn btn-danger">Agendar</button>
+                  <p class="card-text">Polimento técnico com produtos e materiais da melhor qualidade para o melhor
+                    brilho do seu veículo.</p> <br> <button type="button" class="btn btn-danger">Agendar</button>
                 </div>
               </div>
               <div class="card border mb-3" style="max-width: 18rem;">
@@ -227,19 +227,14 @@
                       <span class="visually-hidden">Próximo</span>
                     </button>
                   </div>
-                  <h5 class="card-title"></h5> <br>
-                  <p class="card-text">Aplicação de películas solares de todas as porcentagens permitidas por lei.</p>
+                  <h5 class="card-title"></h5>
+                  <p class="card-text">Aplicação de películas solares de todas as porcentagens permitidas por lei.</p> <br>
                   <button type="button" class="btn btn-danger">Agendar</button>
                 </div>
               </div>
             </div>
-            <div class="row parte2">
-              <p class="subtexto"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit facilis illum,
-                vero, nisi eaque ducimus odio assumenda quisquam tenetur iste veniam aspernatur ipsa cum ad molestias
-                dolores saepe autem officia. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae incidunt,
-                veritatis libero voluptatem doloremque dolores eius iure, quibusdam facilis suscipit repudiandae
-                expedita
-                nobis odit quia aut hic ratione omnis provident?</p>
+            <div class="row parte2" style="padding: 20px;">
+              <p class="subtexto"> No mundo dos automóveis, a primeira impressão é tudo. E é por isso que a nossa equipe está pronta para transformar o seu veículo e fazê-lo brilhar como nunca antes. Seja para preservar o valor do seu carro, impressionar os amigos ou simplesmente para se orgulhar do seu meio de transporte, oferecemos uma ampla gama de serviços que garantirão que o seu automóvel esteja sempre com uma aparência impecável.</p>
             </div>
           </div>
           <br>
@@ -252,15 +247,7 @@
                 <h1 class="titulo">Produtos e Marcas</h1>
               </a>
             </li>
-            <p class="subtexto pem"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit facilis
-              illum,
-              vero,
-              nisi eaque ducimus odio assumenda quisquam tenetur iste veniam aspernatur ipsa cum ad molestias dolores
-              saepe
-              autem officia. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae incidunt, veritatis libero
-              voluptatem doloremque dolores eius iure, quibusdam facilis suscipit repudiandae expedita nobis odit quia
-              aut
-              hic ratione omnis provident?</p>
+            <p class="subtexto pem">Quando se trata de cuidar do seu veículo, qualidade é a nossa prioridade número um. Na Kuruma Shine, estamos empenhados em oferecer um serviço que faz uma diferença notável na aparência e no desempenho do seu automóvel.</p>
           </div>
 
 
